# ctetris

./: .gitignore  .lite_project.lua  2dgraphics.c  2dgraphics.h  CMakeLists.txt  bruh.lua  build.bash  glapi.c  glapi.h  graphics.c  graphics.h  input.c  input.h  licence.md  logs.txt  main.c  readme.md  run.bat  rungcc.bat  shapes.c  tetdata.h  tetris.c  tetris.h  util.c  util.h  vec.h
g/: 2dgraphics.c  2dgraphics.h  glapi.c  glapi.h  graphicsbase.c
res/shaders/: graphics.glsl  text.glsl
res/tests/: intstuff.c  swap.c  swap.cpp  texpack.c
res/tests/hash/: hash.c
util/: hash.c  hash.h  hashfunc.c
